--- a/app/assets/stylesheets/bases.scss
+++ b/app/assets/stylesheets/bases.scss
@@ -1,6 +1,12 @@
 #bases{
   width: 60%;
   margin: 0 auto;
+  background: #efefff;
+  padding: 2em;
+  margin-top: 2em;
+  box-shadow: -5px 5px 30px #efefef;
+  border: 1px solid #fafafa;
+  border-top: 1px solid #ccc;
 
   h2{
     border-bottom: 1px solid #ccc;
@@ -10,6 +16,6 @@
     padding: 1em;
     height: 250px;
     width: 100%;
-    background: #efefef;
+    background: #ddd;
   }
 }
